# src/modules/bids/bids.dto.ts
@@ -1,0 +1,10 @@
+import { IsNumber, Min } from "class-validator";
+import { Type } from "class-transformer";
+
+export class PlaceBidDto {
+    
+  @Type(() => Number)
+  @IsNumber()
+  @Min(0.01)
+  amount!: number;
+}
